[fix] shadows, read more section, cast name truncate

--- a/src/app/features/pages/detail-page/detail-page.component.scss
+++ b/src/app/features/pages/detail-page/detail-page.component.scss
@@ -16,6 +16,20 @@
   @include shadow(md);
 }
 
+.read-more-btn {
+  margin-top: 6px;
+  background: transparent;
+  border: 1px solid $gray-200;
+  border-radius: 12px;
+  color: black;
+  cursor: pointer;
+  padding: 2px 6px;
+  font-size: 12px;
+  font-weight: 500;
+  display: none;
+  gap: 6px;
+}
+
 .dot {
   opacity: 0.5;
   color: black;
@@ -95,8 +109,7 @@
 
   .content {
     position: relative;
-    // padding: 20px;
-    z-index: 1; // scrolls over blurred image
+    z-index: 1;
 
     .movie-details {
       padding: 40px 20px;
@@ -110,6 +123,7 @@
         border-radius: 18px;
         overflow: hidden;
         position: relative;
+        @include shadow(lg);
 
         img {
           width: 100%;
@@ -141,7 +155,7 @@
                 height: auto;
                 display: block;
                 border-radius: 12px;
-                box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+                @include shadow(lg);
               }
 
               @include breakpoint(md) {
@@ -224,6 +238,7 @@
                 left: 0;
                 transform: translate(-50%, -50%);
                 background-color: $gray-100;
+
                 img {
                   height: 70px;
                   width: 70px;
@@ -392,6 +407,24 @@
         .left-section {
           display: none;
         }
+        .main-section {
+          .right-section {
+            .plot-section {
+              .plot {
+                max-height: 90px;
+                overflow: hidden;
+                transition: max-height 0.4s ease-in-out;
+
+                &.expanded {
+                  max-height: 1000px;
+                }
+              }
+              .read-more-btn {
+                @include flex-center;
+              }
+            }
+          }
+        }
       }
     }
 
@@ -480,6 +513,20 @@
 
               .label {
                 font-size: 12px;
+              }
+
+              .plot-wrapper {
+                .season-plot-text {
+                  max-height: 58px;
+                  overflow: hidden;
+                  transition: max-height 0.4s ease-in-out;
+                  &.expanded {
+                    max-height: 1000px;
+                  }
+                }
+                .read-more-btn {
+                  @include flex-center;
+                }
               }
             }
           }
