--- a/src/app/shared/components/profile-card/profile-card.component.scss
+++ b/src/app/shared/components/profile-card/profile-card.component.scss
@@ -24,9 +24,13 @@
   .name {
     font-size: 16px;
     font-weight: 500;
+    max-width: 120px;
+    @include truncate(1);
   }
   .role {
     font-size: 12px;
+    max-width: 120px;
+    @include truncate(1);
   }
 }
 
@@ -41,6 +45,10 @@
     }
     .name {
       font-size: 14px;
+      max-width: 80px;
+    }
+    .role {
+      max-width: 80px;
     }
   }
 }
